# serializer version: 1
# name: test_build_example
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-97db95eb/example-97db95eb-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_97db95eb"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_97db95eb"]
        
        [project]
        name = "example-97db95eb"
        version = "0.0.0"
        dependencies = [
            "example-a-97db95eb",
        ]
        requires-python = ">=3.7"
        description = "This is an example scenario, in which the user depends on a single package `a` which requires `b`."
        
        [project.optional-dependencies]
  
      ''',
      'build/example-97db95eb/example-97db95eb-0.0.0/src/example_97db95eb/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-97db95eb/example-a-97db95eb-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_a_97db95eb"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_a_97db95eb"]
        
        [project]
        name = "example-a-97db95eb"
        version = "1.0.0"
        dependencies = [
            "example-b-97db95eb>1.0.0",
        ]
        requires-python = ">=3.7"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-97db95eb/example-a-97db95eb-1.0.0/src/example_a_97db95eb/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-97db95eb/example-b-97db95eb-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_97db95eb"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_97db95eb"]
        
        [project]
        name = "example-b-97db95eb"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.7"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-97db95eb/example-b-97db95eb-1.0.0/src/example_b_97db95eb/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-97db95eb/example-b-97db95eb-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_97db95eb"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_97db95eb"]
        
        [project]
        name = "example-b-97db95eb"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.7"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-97db95eb/example-b-97db95eb-2.0.0/src/example_b_97db95eb/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-97db95eb/example-b-97db95eb-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_97db95eb"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_97db95eb"]
        
        [project]
        name = "example-b-97db95eb"
        version = "3.0.0"
        dependencies = [
            "example-c-97db95eb",
        ]
        requires-python = ">=3.7"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-97db95eb/example-b-97db95eb-3.0.0/src/example_b_97db95eb/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-97db95eb/example_97db95eb-0.0.0.tar.gz': 'md5:2c6fa742b5b896e92cb2db7148203b57',
      'dist/example-97db95eb/example_a_97db95eb-1.0.0-py3-none-any.whl': 'md5:7beb23387bfd276a1868b36d8167ec8c',
      'dist/example-97db95eb/example_a_97db95eb-1.0.0.tar.gz': 'md5:d99aa8d231fb7ff81ee4fecee0b50b43',
      'dist/example-97db95eb/example_b_97db95eb-1.0.0-py3-none-any.whl': 'md5:c01584594f7e94373120236b22fa164d',
      'dist/example-97db95eb/example_b_97db95eb-1.0.0.tar.gz': 'md5:e9fe7a73190913e6e725eb34ad50313f',
      'dist/example-97db95eb/example_b_97db95eb-2.0.0-py3-none-any.whl': 'md5:472ea56f9bb8677464ab8c6d8bdd96e4',
      'dist/example-97db95eb/example_b_97db95eb-2.0.0.tar.gz': 'md5:a064dc42c56c63e5b19bfead3db46008',
      'dist/example-97db95eb/example_b_97db95eb-3.0.0-py3-none-any.whl': 'md5:bba9747927a325168adf9e12a1cbfb30',
      'dist/example-97db95eb/example_b_97db95eb-3.0.0.tar.gz': 'md5:450a1f20911b7a72fb65500737d9d267',
      'tree': '''
        test_build_example0
        ├── build
        │   └── example-97db95eb
        │       ├── example-97db95eb-0.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_97db95eb
        │       │           └── __init__.py
        │       ├── example-a-97db95eb-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_a_97db95eb
        │       │           └── __init__.py
        │       ├── example-b-97db95eb-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_97db95eb
        │       │           └── __init__.py
        │       ├── example-b-97db95eb-2.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_97db95eb
        │       │           └── __init__.py
        │       └── example-b-97db95eb-3.0.0
        │           ├── pyproject.toml
        │           └── src
        │               └── example_b_97db95eb
        │                   └── __init__.py
        └── dist
            └── example-97db95eb
                ├── example_97db95eb-0.0.0.tar.gz
                ├── example_a_97db95eb-1.0.0-py3-none-any.whl
                ├── example_a_97db95eb-1.0.0.tar.gz
                ├── example_b_97db95eb-1.0.0-py3-none-any.whl
                ├── example_b_97db95eb-1.0.0.tar.gz
                ├── example_b_97db95eb-2.0.0-py3-none-any.whl
                ├── example_b_97db95eb-2.0.0.tar.gz
                ├── example_b_97db95eb-3.0.0-py3-none-any.whl
                └── example_b_97db95eb-3.0.0.tar.gz
        
        19 directories, 19 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-97db95eb
  
    ''',
  })
# ---
# name: test_build_example_already_exists
  dict({
    'exit_code': 1,
    'filesystem': dict({
      'tree': '''
        test_build_example_already_exi0
        └── build
            └── example-97db95eb
        
        2 directories
  
      ''',
    }),
    'stderr': '''
      Building 'example-97db95eb' in directory 'build/example-97db95eb'
      Destination directory '[PWD]/build/example-97db95eb' already exists. Pass `--rm` to allow removal.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_example_already_exists_with_rm_flag
  dict({
    'exit_code': 0,
    'stderr': '<not included>',
    'stdout': '''
      example-97db95eb
  
    ''',
  })
# ---
# name: test_build_example_short_names
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-97db95eb/a-97db95eb-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/a_97db95eb"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/a_97db95eb"]
        
        [project]
        name = "a-97db95eb"
        version = "1.0.0"
        dependencies = [
            "b-97db95eb>1.0.0",
        ]
        requires-python = ">=3.7"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-97db95eb/a-97db95eb-1.0.0/src/a_97db95eb/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-97db95eb/b-97db95eb-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/b_97db95eb"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/b_97db95eb"]
        
        [project]
        name = "b-97db95eb"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.7"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-97db95eb/b-97db95eb-1.0.0/src/b_97db95eb/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-97db95eb/b-97db95eb-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/b_97db95eb"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/b_97db95eb"]
        
        [project]
        name = "b-97db95eb"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.7"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-97db95eb/b-97db95eb-2.0.0/src/b_97db95eb/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-97db95eb/b-97db95eb-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/b_97db95eb"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/b_97db95eb"]
        
        [project]
        name = "b-97db95eb"
        version = "3.0.0"
        dependencies = [
            "c-97db95eb",
        ]
        requires-python = ">=3.7"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-97db95eb/b-97db95eb-3.0.0/src/b_97db95eb/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'build/example-97db95eb/example-97db95eb-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_97db95eb"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_97db95eb"]
        
        [project]
        name = "example-97db95eb"
        version = "0.0.0"
        dependencies = [
            "a-97db95eb",
        ]
        requires-python = ">=3.7"
        description = "This is an example scenario, in which the user depends on a single package `a` which requires `b`."
        
        [project.optional-dependencies]
  
      ''',
      'build/example-97db95eb/example-97db95eb-0.0.0/src/example_97db95eb/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'dist/example-97db95eb/a_97db95eb-1.0.0-py3-none-any.whl': 'md5:ce2a3dbca05cb9e001a64ab58f569eeb',
      'dist/example-97db95eb/a_97db95eb-1.0.0.tar.gz': 'md5:2d4528dddb035159c317aa33f514fd35',
      'dist/example-97db95eb/b_97db95eb-1.0.0-py3-none-any.whl': 'md5:cafdc6850c3374e9a241eabd23a8c960',
      'dist/example-97db95eb/b_97db95eb-1.0.0.tar.gz': 'md5:0b536430d72095387ad5fd5cecba0365',
      'dist/example-97db95eb/b_97db95eb-2.0.0-py3-none-any.whl': 'md5:b35b44badd779509f9396d287b8414a2',
      'dist/example-97db95eb/b_97db95eb-2.0.0.tar.gz': 'md5:2cbe5f8fbde8bf8e2d9789a8f1d0ed3c',
      'dist/example-97db95eb/b_97db95eb-3.0.0-py3-none-any.whl': 'md5:f7548b63b2e7eef0b3b79531e05704b3',
      'dist/example-97db95eb/b_97db95eb-3.0.0.tar.gz': 'md5:55b359591b03bc4c9e28eaaae3d70035',
      'dist/example-97db95eb/example_97db95eb-0.0.0.tar.gz': 'md5:75c2214bcd6db9786587ed20425fd0ef',
      'tree': '''
        test_build_example_short_names0
        ├── build
        │   └── example-97db95eb
        │       ├── a-97db95eb-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── a_97db95eb
        │       │           └── __init__.py
        │       ├── b-97db95eb-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── b_97db95eb
        │       │           └── __init__.py
        │       ├── b-97db95eb-2.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── b_97db95eb
        │       │           └── __init__.py
        │       ├── b-97db95eb-3.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── b_97db95eb
        │       │           └── __init__.py
        │       └── example-97db95eb-0.0.0
        │           ├── pyproject.toml
        │           └── src
        │               └── example_97db95eb
        │                   └── __init__.py
        └── dist
            └── example-97db95eb
                ├── a_97db95eb-1.0.0-py3-none-any.whl
                ├── a_97db95eb-1.0.0.tar.gz
                ├── b_97db95eb-1.0.0-py3-none-any.whl
                ├── b_97db95eb-1.0.0.tar.gz
                ├── b_97db95eb-2.0.0-py3-none-any.whl
                ├── b_97db95eb-2.0.0.tar.gz
                ├── b_97db95eb-3.0.0-py3-none-any.whl
                ├── b_97db95eb-3.0.0.tar.gz
                └── example_97db95eb-0.0.0.tar.gz
        
        19 directories, 19 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-97db95eb
  
    ''',
  })
# ---
# name: test_build_example_with_seed
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-9fa36ff3/example-9fa36ff3-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_9fa36ff3"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_9fa36ff3"]
        
        [project]
        name = "example-9fa36ff3"
        version = "0.0.0"
        dependencies = [
            "example-a-9fa36ff3",
        ]
        requires-python = ">=3.7"
        description = "This is an example scenario, in which the user depends on a single package `a` which requires `b`."
        
        [project.optional-dependencies]
  
      ''',
      'build/example-9fa36ff3/example-9fa36ff3-0.0.0/src/example_9fa36ff3/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-9fa36ff3/example-a-9fa36ff3-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_a_9fa36ff3"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_a_9fa36ff3"]
        
        [project]
        name = "example-a-9fa36ff3"
        version = "1.0.0"
        dependencies = [
            "example-b-9fa36ff3>1.0.0",
        ]
        requires-python = ">=3.7"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-9fa36ff3/example-a-9fa36ff3-1.0.0/src/example_a_9fa36ff3/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-9fa36ff3/example-b-9fa36ff3-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_9fa36ff3"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_9fa36ff3"]
        
        [project]
        name = "example-b-9fa36ff3"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.7"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-9fa36ff3/example-b-9fa36ff3-1.0.0/src/example_b_9fa36ff3/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-9fa36ff3/example-b-9fa36ff3-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_9fa36ff3"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_9fa36ff3"]
        
        [project]
        name = "example-b-9fa36ff3"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.7"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-9fa36ff3/example-b-9fa36ff3-2.0.0/src/example_b_9fa36ff3/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-9fa36ff3/example-b-9fa36ff3-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_9fa36ff3"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_9fa36ff3"]
        
        [project]
        name = "example-b-9fa36ff3"
        version = "3.0.0"
        dependencies = [
            "example-c-9fa36ff3",
        ]
        requires-python = ">=3.7"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-9fa36ff3/example-b-9fa36ff3-3.0.0/src/example_b_9fa36ff3/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-9fa36ff3/example_9fa36ff3-0.0.0.tar.gz': 'md5:3bd47120b8acc629755f05b76cca2118',
      'dist/example-9fa36ff3/example_a_9fa36ff3-1.0.0-py3-none-any.whl': 'md5:cb1d6f0089bfdca11ce1432ded413bfb',
      'dist/example-9fa36ff3/example_a_9fa36ff3-1.0.0.tar.gz': 'md5:6a831f6ff52472e47bc4521ca5bd8b07',
      'dist/example-9fa36ff3/example_b_9fa36ff3-1.0.0-py3-none-any.whl': 'md5:7a20119eb627a993cac9985599f9c997',
      'dist/example-9fa36ff3/example_b_9fa36ff3-1.0.0.tar.gz': 'md5:c5efdf929646138e8edf0d5ab0aba6ef',
      'dist/example-9fa36ff3/example_b_9fa36ff3-2.0.0-py3-none-any.whl': 'md5:e9b2ebf087fd8bf947c40719bee7292d',
      'dist/example-9fa36ff3/example_b_9fa36ff3-2.0.0.tar.gz': 'md5:53609ed5e0bd86894336138df79d7dcf',
      'dist/example-9fa36ff3/example_b_9fa36ff3-3.0.0-py3-none-any.whl': 'md5:0b6fec83f9f65b3f647eb7c01fb05551',
      'dist/example-9fa36ff3/example_b_9fa36ff3-3.0.0.tar.gz': 'md5:3a384983e56888a07245bb9289c08ac0',
      'tree': '''
        test_build_example_with_seed0
        ├── build
        │   └── example-9fa36ff3
        │       ├── example-9fa36ff3-0.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_9fa36ff3
        │       │           └── __init__.py
        │       ├── example-a-9fa36ff3-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_a_9fa36ff3
        │       │           └── __init__.py
        │       ├── example-b-9fa36ff3-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_9fa36ff3
        │       │           └── __init__.py
        │       ├── example-b-9fa36ff3-2.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_9fa36ff3
        │       │           └── __init__.py
        │       └── example-b-9fa36ff3-3.0.0
        │           ├── pyproject.toml
        │           └── src
        │               └── example_b_9fa36ff3
        │                   └── __init__.py
        └── dist
            └── example-9fa36ff3
                ├── example_9fa36ff3-0.0.0.tar.gz
                ├── example_a_9fa36ff3-1.0.0-py3-none-any.whl
                ├── example_a_9fa36ff3-1.0.0.tar.gz
                ├── example_b_9fa36ff3-1.0.0-py3-none-any.whl
                ├── example_b_9fa36ff3-1.0.0.tar.gz
                ├── example_b_9fa36ff3-2.0.0-py3-none-any.whl
                ├── example_b_9fa36ff3-2.0.0.tar.gz
                ├── example_b_9fa36ff3-3.0.0-py3-none-any.whl
                └── example_b_9fa36ff3-3.0.0.tar.gz
        
        19 directories, 19 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-9fa36ff3
  
    ''',
  })
# ---
# name: test_build_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_no_target
  dict({
    'exit_code': 2,
    'stderr': '''
      usage: packse build [-h] [--rm] [--short-names] [-v] [-q]
                          targets [targets ...]
      packse build: error: the following arguments are required: targets
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
